<resources>
    <string name="sex_input">Indicate your gender</string>
    <string name="app_name" translatable="false">Yes u Du</string>
    <string name="email_forgot_txt">Enter your email</string>
    <string name="email_hint">Enter an Email</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="email_reg_hint" translatable="false">Email</string>
    <string name="pass_hint">Password</string>
    <string name="pass_reg_hint">Password</string>
    <string name="name_hint">Name</string>
    <string name="surname_hint">Surname</string>
    <string name="location_hint">Location</string>
    <string name="country_hint">Country</string>
    <string name="city_hint">City</string>
    <string name="reg_button_text">Register</string>
    <string name="login_button_text">Log in</string>
    <string name="reject_reg">Fill in all required registration fields</string>
    <string name="reject_reg_name">Enter your name</string>
    <string name="reject_reg_surname">Enter your surname</string>
    <string name="reject_reg_email">Enter your email</string>
    <string name="reject_reg_password">Enter your password</string>
    <string name="is_successful">Registration is successful</string>
    <string name="is_not_successful">Registration is not successful</string>
    <string name="failed_login">False email or password</string>
    <string name="logout_menu">Logout</string>
    <string name="country">Country:</string>
    <string name="country_label">Country</string>
    <string name="city">City:</string>
    <string name="region">Region:</string>
    <string name="sex">Sex:</string>
    <string name="age">Age</string>
    <string name="region_reg_hint">Region</string>
    <string name="age_reg_hint">Age</string>
    <string name="sex_reg_hint">Sex</string>
    <string name="myAccount">My account</string>
    <string name="chat_list">Chats</string>
    <string name="failed_update_photo">Failed update photo</string>
    <string name="no_image_selected">No image selected</string>
    <string name="upload_progress">Upload in progress</string>
    <string name="find_menu_item_title">find</string>
    <string name="label_sex">Sex</string>
    <string name="label_male">Male</string>
    <string name="label_female">Female</string>
    <string name="label_activity">Online</string>
    <string name="label_online">online</string>
    <string name="label_offline">offline</string>
    <string name="label_additional">Additional filters</string>
    <string name="label_only_with_photo">with photo</string>
    <string name="label_name">Name</string>
    <string name="name_edit_text_hint">Enter a name</string>
    <string name="search_pos_button_text">search</string>
    <string name="enter_email_and_password">Enter email and password for login</string>
    <string name="password_length_short">Password is short</string>
    <string name="edit_account">Edit</string>
    <string name="make_admin">Make admin</string>
    <string name="uploading">uploading</string>
    <string name="ok_pos_button_text" translatable="false">OK</string>
    <string name="label_age">Age</string>
    <string name="city_edit_text_hint">City</string>
    <string name="back_menu">Back</string>
    <string name="seen_text">seen</string>
    <string name="not_seen_text">no seen</string>
    <string name="remove_account_menu_item">remove account</string>
    <string name="choose_image_from">Choose image from</string>
    <string name="sending_image">Sending image…</string>
    <string name="image_attach">Send photo</string>
    <string name="delete_chat">Delete chat</string>
    <string name="blocklist">BlockList</string>
    <string name="saved_image">Photo saved</string>
    <string name="dialog_title_edit">Edit account</string>
    <string name="dialog_title_delete">Delete chat</string>
    <string name="delete_image1">Delete photo 1</string>
    <string name="delete_users">User deleted this account</string>
    <string name="block_chat">Block userModel</string>
    <string name="have_not_photo">You have not photo</string>
    <string name="photo_delete">Photo deleted</string>
    <string name="unblock_msg_text">Unblock userModel?</string>
    <string name="unblock">Unblock</string>
    <string name="panel_admin">Administrator panel</string>
    <string name="you_are_not_verificated">You are not verificated</string>
    <string name="block_account">Block account</string>
    <string name="unblock_account">Unblock account(time)</string>
    <string name="photo_cant_delete">can\'t delete photo</string>
    <string name="male_sex">Male</string>
    <string name="female_sex">Female</string>
    <string-array name="sex_for_spinner">
        <item>  </item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="age_for_spinner">
        <item>under 18</item>
        <item>18–30</item>
        <item>30–45</item>
        <item>45–60</item>
        <item>60+</item>
        <item>none</item>
    </string-array>
    <string name="blocked_chat">This chat was blocked</string>
    <string name="blocked_by_admin">You have been blocked by Administration</string>
    <string name="reset_password">Reset password</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="password_reset">Password was reset</string>
    <string name="password_not_reset">Password was not reset</string>
    <string name="incorrect_old_password">Incorrect old password</string>
    <string name="saved_password">Save</string>
    <string name="about_hint">Tell about yourself</string>
    <string name="set_photo">Set photo</string>
    <string name="about">About:</string>
    <string name="verify_text">To complete registration, follow the link sent to your email address</string>
    <string name="required_photos">Download photos, it is require for registration</string>
    <string name="reject_update">You entered empty important strings.Update rejected</string>
    <string name="gallery_text">Gallery</string>
    <string name="admin">Administration</string>
    <string name="admin_key" translatable="false">admin</string>
    <string name="complain_menu">Complain to admin</string>
    <string name="look_all">Look all photos</string>
    <string name="you_photo">Before uploading photos, please read the requirements.</string>
    <string name="add_image">Add image</string>
    <string name="you_cant_add_4_photo">you cannot add more than 4 photos</string>
    <string name="you_cannot_delete_photo">you cannot have less than 2 photos in the gallery</string>
    <string name="reset_image">Reset image</string>
    <string name="delete_image2">Delete photo 2</string>
    <string name="delete_image3">Delete photo 3</string>
    <string name="delete_image4">Delete photo 4</string>
    <string name="rule_and_policy">Privacy Policy</string>
    <string name="about_us">About us</string>
    <string name="rule_and_resources">Rules of resource</string>
    <string name="read_rules">By registering, you agree to our Policy and Rules</string>
    <string name="region_label">Region</string>
    <string name="favorite_chat">Add in favorites</string>
    <string name="favoritelist">Favorites</string>
    <string name="list_block_admin">Time-blocked by admin</string>
    <string name="perm_block_account">Permanent block</string>
    <string name="verified">Confirm account</string>
    <string name="perm_block_account_title">Permanent blocked</string>
    <string name="date_birth">Add age</string>
    <string name="data_notif">Dear userModel, please indicate your real data. In case of detection of fictitious data, the userModel will be deleted by the Administration.</string>
    <string name="remember_password">Remember your password</string>
</resources>