<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/verified"
        android:title="@string/verified"
        app:showAsAction="never" />

    <item
        android:id="@+id/block_account"
        android:title="@string/block_account"
        app:showAsAction="never" />

    <item
        android:id="@+id/perm_block_account"
        android:title="@string/perm_block_account"
        app:showAsAction="never" />

    <item
        android:id="@+id/delete_image_menu"
        android:title="@string/delete_image1"
        app:showAsAction="never" />
    <item
        android:id="@+id/delete_image1_menu"
        android:title="@string/delete_image2"
        app:showAsAction="never" />
    <item
        android:id="@+id/delete_image2_menu"
        android:title="@string/delete_image3"
        app:showAsAction="never" />
    <item
        android:id="@+id/delete_image3_menu"
        android:title="@string/delete_image4"
        app:showAsAction="never" />

    <item
        android:id="@+id/list_block_admin"
        android:title="@string/list_block_admin"
        app:showAsAction="never" />

    <item
        android:id="@+id/perm_block_admin"
        android:title="@string/perm_block_account_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/favorite_add"
        android:title="@string/favorite_chat"
        app:showAsAction="never" />

    <item
        android:id="@+id/edit_user"
        android:title="@string/edit_account"
        app:showAsAction="never" />

    <item
        android:id="@+id/make_admin"
        android:title="@string/make_admin"
        app:showAsAction="never" />
</menu>